deploy/kustomize/apps/todospa/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todospa
  namespace: apps
spec:
  selector:
    app: todospa
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
